# goit-pycore-hw-03

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
docs/html/: index.html  task1.html  task2.html  task3.html  task4.html
docs/md/: index.md  task1.md  task2.md  task3.md  task4.md
goit-pycore-hw-03/src/: task1.py  task2.py  task3.py  task4.py  task4_readme.md
goit-pycore-hw-03/src/data/: salaries.txt
goit-pycore-hw-03/tests/: test_task1.py  test_task2.py  test_task3.py  test_task4.py
